# pytest-pointers

./: .gitignore  README.md  README.rst  pyproject.toml  pytest.ini
.github/workflows/: on-pr.yml  on-release.yml  python-publish.yml
pytest_pointers/: plugin.py  utils.py
pytest_pointers/tests/: test_plugin.py  test_utils.py
pytest_pointers/tests/mock_structure/: for_func_finder.py
