[tool.poetry]
name = "pytest-pointers"
version = "0.2.3"
description = "Pytest plugin to define functions you test with special marks for better navigation and reports"
authors = ["Jack Klimov <jaklimoff@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/jaklimoff/pytest-pointers"
homepage = "https://github.com/jaklimoff/pytest-pointers"
keywords = ['plugin', 'pytest']

[tool.poetry.plugins."pytest11"]
plugin = "pytest_pointers.plugin"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^9.3.0"
libcst = "^0.3.15"

[tool.poetry.dev-dependencies]
pytest = "^6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
